[gd_scene load_steps=2 format=3 uid="uid://ws85m3o11rhu"]

[ext_resource type="Script" path="res://scenes/config_screen.gd" id="1_8ue63"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8ue63")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 428.0
offset_right = 698.0
offset_bottom = 618.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tempo de Foco (min):"

[node name="FocusTimeInput" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
value = 5.0

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tempo de Descanso (min) :"

[node name="BreakTimeInput" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
value = 5.0

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Salvar"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cancelar"
